docs: update documents

--- a/docs/V1.0升级到V2.0迁移手册.md
+++ b/docs/V1.0升级到V2.0迁移手册.md
@@ -9,17 +9,17 @@ npm install -S yxyweb
 
 <a name="cpeuc"></a>
 ## 2、修改webapck配置
-增加node_modules下yxyweb包解析<br />![image.png](https://cdn.nlark.com/yuque/0/2019/png/192681/1560823187463-53563341-3adf-4f61-94d4-5df9e4bde045.png#align=left&display=inline&height=184&name=image.png&originHeight=368&originWidth=1586&size=83550&status=done&width=793)
+增加node_modules下yxyweb包解析<br />![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/192681/1560823187463-53563341-3adf-4f61-94d4-5df9e4bde045.png#align=left&display=inline&height=184&name=image.png&originHeight=368&originWidth=1586&size=83550&status=done&width=793)
 
 <a name="YIFkC"></a>
 ## 3、babel修改
-在module-resolver中修改alias属性，去掉yxyweb、将SvgIcon引入方式换成"./node_modules/yxyweb/common/components/common/SvgIcon.js"。<br />原babelrc修改                                                                        修改后的babelrc<br />![image.png](https://cdn.nlark.com/yuque/0/2019/png/192681/1560822948702-b6c966ab-c7bd-437f-bae3-09f6581cdfe8.png#align=left&display=inline&height=110&name=image.png&originHeight=664&originWidth=1986&size=86768&status=done&width=326)          ![](https://cdn.nlark.com/yuque/0/2019/png/192681/1560823008002-2b8d72f6-5b7b-4adf-93ac-d71c6ce2512a.png#align=left&display=inline&height=107&originHeight=650&originWidth=2090&status=done&width=344)
+在module-resolver中修改alias属性，去掉yxyweb、将SvgIcon引入方式换成"./node_modules/yxyweb/common/components/common/SvgIcon.js"。<br />原babelrc修改                                                                        修改后的babelrc<br />![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/192681/1560822948702-b6c966ab-c7bd-437f-bae3-09f6581cdfe8.png#align=left&display=inline&height=110&name=image.png&originHeight=664&originWidth=1986&size=86768&status=done&width=326)          ![](http://design.yonyoucloud.com/static/yuque/0/2019/png/192681/1560823008002-2b8d72f6-5b7b-4adf-93ac-d71c6ce2512a.png#align=left&display=inline&height=107&originHeight=650&originWidth=2090&status=done&width=344)
 
 <a name="O4v7E"></a>
 ## 4、node服务
 在node服务启动命令babel-node需要增加参数指的node_modules解析
 
-![image.png](https://cdn.nlark.com/yuque/0/2019/png/192681/1560823322964-7d5a8421-3fd7-439a-a496-b9aff2f5a60d.png#align=left&display=inline&height=72&name=image.png&originHeight=144&originWidth=1976&size=305254&status=done&width=988)<br />最终配置
+![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/192681/1560823322964-7d5a8421-3fd7-439a-a496-b9aff2f5a60d.png#align=left&display=inline&height=72&name=image.png&originHeight=144&originWidth=1976&size=305254&status=done&width=988)<br />最终配置
 ```javascript
  "debug:server": "cross-env BABEL_ENV=production NODE_ENV=development SRV_URL=http://upc-server.test.app.yyuap.com PRINT_SERVER=http://uretailserver.yonyouup.com/print_service nodemon -w src/server -w src/common --exec babel-node --only='/node_modules/yxyweb/,/src' --inspect src/server/app.jsx",
 ```
