--- a/docs/参照设计说明.md
+++ b/docs/参照设计说明.md
@@ -1,7 +1,6 @@
-
 <a name="pWMJg"></a>
 ## 设计原理
- meta字段中的cControlType属性为‘refer’会自动解析成参照输入框组件。以下是具体的实现原理<br />![image.png](https://cdn.nlark.com/yuque/0/2019/png/192681/1557226365033-116f52b5-4be9-4f01-825a-c39b3b15ae6f.png#align=left&display=inline&height=551&name=image.png&originHeight=1102&originWidth=1910&size=163841&status=done&width=955)
+ meta字段中的cControlType属性为‘refer’会自动解析成参照输入框组件。以下是具体的实现原理<br />![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/192681/1557226365033-116f52b5-4be9-4f01-825a-c39b3b15ae6f.png#align=left&display=inline&height=551&name=image.png&originHeight=1102&originWidth=1910&size=163841&status=done&width=955)
 
 - 参照字段说明：
 | 字段 | 默认字段 | 元数据字段 |
