--- a/docs/扩展开发-打印.md
+++ b/docs/扩展开发-打印.md
@@ -1,4 +1,4 @@
-功能概述<br />      目前打印组件实现了打印预览、打印设计、直接打印功能。直接打印目前只支持WInodws系统。用户可以在excel中自定义打印按钮的布局。下面是以dropdown形式你实现的。![image.png](https://cdn.nlark.com/yuque/0/2019/png/192681/1560390193991-f4ca6df3-5fdb-4bdd-8663-88bdad57a68c.png#align=left&display=inline&height=200&name=image.png&originHeight=400&originWidth=936&size=46212&status=done&width=468)
+功能概述<br />      目前打印组件实现了打印预览、打印设计、直接打印功能。直接打印目前只支持WInodws系统。用户可以在excel中自定义打印按钮的布局。下面是以dropdown形式你实现的。![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/192681/1560390193991-f4ca6df3-5fdb-4bdd-8663-88bdad57a68c.png#align=left&display=inline&height=200&name=image.png&originHeight=400&originWidth=936&size=46212&status=done&width=468)
 <a name="rQ07z"></a>
 ### 使用方式
 增加PRINT_META参数，将打印的公共参数提取出来。目前支持package.json、env扩展两种方式。package.json优先级高于env扩展，但是可读性稍微差些。
@@ -177,4 +177,3 @@ bisViewModel.on('beforePrintpreview',(params)=>{
 
 
 - beforePrintdesign 打印设计之前的回调，用户可以动态的修改params参数
-
