--- a/docs/典型场景开发指导.md
+++ b/docs/典型场景开发指导.md
@@ -4,7 +4,7 @@
 ## 一、多卡片显示和隐藏
 **1、元数据的XML配置**<br />配置元数据为多个实体，实体之间的关系为一对一，此处不做配置的详细说明<br />此方式需要配置roleAMulti="0..n"
 
-**2、UI元数据的Excel配置**<br />配置红框中的前3条数据为GroupContainer、Group、Div，代表基础组织卡片区域，后3条数据代表行政组织卡片区域，里面的属性不作详细明说<br />![image.png](https://cdn.nlark.com/yuque/0/2019/png/271337/1553308584352-ff07f3fb-4fe8-4751-b7a4-886215c8fb3b.png#align=left&display=inline&height=390&name=image.png&originHeight=390&originWidth=2092&size=128222&status=done&width=2092)<br />
+**2、UI元数据的Excel配置**<br />配置红框中的前3条数据为GroupContainer、Group、Div，代表基础组织卡片区域，后3条数据代表行政组织卡片区域，里面的属性不作详细明说<br />![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/271337/1553308584352-ff07f3fb-4fe8-4751-b7a4-886215c8fb3b.png#align=left&display=inline&height=390&name=image.png&originHeight=390&originWidth=2092&size=128222&status=done&width=2092)<br />
 <br />Excel示例附件[组织多卡片.xlsm](https://www.yuque.com/attachments/yuque/0/2019/xlsm/271337/1553310451265-b5be207f-a9a5-4ac9-8ec9-eaf6ca436116.xlsm?_lake_card=%7B%22uid%22%3A%22rc-upload-1553310409712-3%22%2C%22src%22%3A%22https%3A%2F%2Fwww.yuque.com%2Fattachments%2Fyuque%2F0%2F2019%2Fxlsm%2F271337%2F1553310451265-b5be207f-a9a5-4ac9-8ec9-eaf6ca436116.xlsm%22%2C%22name%22%3A%22%E7%BB%84%E7%BB%87%E5%A4%9A%E5%8D%A1%E7%89%87.xlsm%22%2C%22size%22%3A162176%2C%22type%22%3A%22application%2Fvnd.ms-excel.sheet.macroenabled.12%22%2C%22ext%22%3A%22xlsm%22%2C%22progress%22%3A%7B%22percent%22%3A0%7D%2C%22status%22%3A%22done%22%2C%22percent%22%3A0%2C%22card%22%3A%22file%22%7D)
 
 **3、指定子表编辑的数据**<br />由于处理 一主一子 关系时认为 一主一子 是 一主多子 的特殊情况，所以需要主动告诉模型当前是 一主一子 的情况，框架在进行操作时会特殊处理
@@ -234,20 +234,20 @@ cb.define(['common/common_VM.Extend.js'], function (common) {
 }
 ```
 
-**2、在Excel中对应的容器配置cStyle属性**<br />![image.png](https://cdn.nlark.com/yuque/0/2019/png/271337/1554204299639-973dc01f-ea7c-4966-96b4-d667e2d0d46d.png#align=left&display=inline&height=242&name=image.png&originHeight=242&originWidth=1514&size=47370&status=done&width=1514)
+**2、在Excel中对应的容器配置cStyle属性**<br />![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/271337/1554204299639-973dc01f-ea7c-4966-96b4-d667e2d0d46d.png#align=left&display=inline&height=242&name=image.png&originHeight=242&originWidth=1514&size=47370&status=done&width=1514)
 
 **3、打开运行时界面查看运行效果**<br />**
 <a name="4082c106"></a>
 ## 五、过滤器及方案配置
 **1、单据信息表配置**<br />单据信息表中为单据配置默认过滤器，属性为cFilterId，值为pb_meta_filters表的主键
 
-**2、配置过滤方案4张表**<br />配置pb_meta_filters、pb_meta_filter_item、pb_filter_solution、pb_filter_solution_common数据<br />pb_meta_filters：过滤器，配置过滤器，可以配置多个过滤器，单据中配置默认过滤器，目前框架也支持在运行时配置单据过滤器<br />pb_meta_filter_item：过滤项，过滤项字段必需是billitem_base中的字段且字段bFilter必需开启<br />pb_filter_solution：过滤方案，过滤的最大单位<br />pb_filter_solution_common：过滤方案公共<br />![image.png](https://cdn.nlark.com/yuque/0/2019/png/271337/1554343604723-ac5f49cc-d782-4598-910f-b41b66e8dcdb.png#align=left&display=inline&height=300&name=image.png&originHeight=600&originWidth=2156&size=209568&status=done&width=1078)
+**2、配置过滤方案4张表**<br />配置pb_meta_filters、pb_meta_filter_item、pb_filter_solution、pb_filter_solution_common数据<br />pb_meta_filters：过滤器，配置过滤器，可以配置多个过滤器，单据中配置默认过滤器，目前框架也支持在运行时配置单据过滤器<br />pb_meta_filter_item：过滤项，过滤项字段必需是billitem_base中的字段且字段bFilter必需开启<br />pb_filter_solution：过滤方案，过滤的最大单位<br />pb_filter_solution_common：过滤方案公共<br />![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/271337/1554343604723-ac5f49cc-d782-4598-910f-b41b66e8dcdb.png#align=left&display=inline&height=300&name=image.png&originHeight=600&originWidth=2156&size=209568&status=done&width=1078)
 
 <a name="9e5e4f90"></a>
 ## 六、表格|列表树使用
 **1、元数据的XML配置**<br />XML示例附件[pc.productcls.xml.zip](https://www.yuque.com/attachments/yuque/0/2019/zip/271337/1554355860525-0b859afb-0057-4cb3-a220-5ccaa8dc4b49.zip?_lake_card=%7B%22uid%22%3A%22rc-upload-1554355729034-8%22%2C%22src%22%3A%22https%3A%2F%2Fwww.yuque.com%2Fattachments%2Fyuque%2F0%2F2019%2Fzip%2F271337%2F1554355860525-0b859afb-0057-4cb3-a220-5ccaa8dc4b49.zip%22%2C%22name%22%3A%22pc.productcls.xml.zip%22%2C%22size%22%3A1443%2C%22type%22%3A%22application%2Fzip%22%2C%22ext%22%3A%22zip%22%2C%22progress%22%3A%7B%22percent%22%3A0%7D%2C%22status%22%3A%22done%22%2C%22percent%22%3A0%2C%22card%22%3A%22file%22%7D)
 
-**2、UI元数据的Excel配置**<br />配置表格类型(cContorlType)为TreeTable<br />![](https://cdn.nlark.com/yuque/0/2019/png/271337/1554342865449-38bfeee8-c831-49a4-97d9-bbca0f76af28.png#align=left&display=inline&height=86&originHeight=212&originWidth=1830&status=done&width=746)
+**2、UI元数据的Excel配置**<br />配置表格类型(cContorlType)为TreeTable<br />![](http://design.yonyoucloud.com/static/yuque/0/2019/png/271337/1554342865449-38bfeee8-c831-49a4-97d9-bbca0f76af28.png#align=left&display=inline&height=86&originHeight=212&originWidth=1830&status=done&width=746)
 
 Excel示例附件[管理分类列表.xlsm](https://www.yuque.com/attachments/yuque/0/2019/xlsm/271337/1554343066450-066426a2-5de6-454c-be36-ca380e310d26.xlsm?_lake_card=%7B%22uid%22%3A%22rc-upload-1554342457121-4%22%2C%22src%22%3A%22https%3A%2F%2Fwww.yuque.com%2Fattachments%2Fyuque%2F0%2F2019%2Fxlsm%2F271337%2F1554343066450-066426a2-5de6-454c-be36-ca380e310d26.xlsm%22%2C%22name%22%3A%22%E7%AE%A1%E7%90%86%E5%88%86%E7%B1%BB%E5%88%97%E8%A1%A8.xlsm%22%2C%22size%22%3A167367%2C%22type%22%3A%22application%2Fvnd.ms-excel.sheet.macroenabled.12%22%2C%22ext%22%3A%22xlsm%22%2C%22progress%22%3A%7B%22percent%22%3A0%7D%2C%22status%22%3A%22done%22%2C%22percent%22%3A0%2C%22card%22%3A%22file%22%7D)
 
@@ -391,4 +391,3 @@ export default connect(mapStateToProps, mapDispatchToProps)(itemMultiView);
 ```javascript
 viewmodel.getGridModel().setState('pagination', true);
 ```
-
