--- a/docs/V1.0 和 V2.0 的特性区分.md
+++ b/docs/V1.0 和 V2.0 的特性区分.md
@@ -1,20 +1,20 @@
 <a name="tdXx1"></a>
 ## 版本差异说明
+
 | 版本功能 | V1.0 | V2.0 |
-| --- | :---: | :---: |
+| :---: | :---: | :---: |
 | 是否支持多主题多交互 | 部分支持多主题，不支持多交互模式 | 支持多主题，支持多交互模式 |
 | 运行时框架引入公共package的方式 | 通过git
   clone的方式更新yxyweb仓库源码 | 通过
   NPM 的方式规范化按版本引入 MDF 相关模块 |
-| 运行时框架是否具备版本化管理 | 不支持 | 支持 |
-| 分层分包 | 没有分层分包，框架公共代码包在yxyweb仓库维护。 | 1、实现了分层分包的框架架构，支持通过扩展包的方式满足不同需求的开发者，解决目前框架大而全问题；<br />2、分层后的代码在yonyou-mdf-framework
-  中，提供 9 个Package 子模块，地址：http://git.yonyou.com/yonyou-mdf/yonyou-mdf-framework |
-| 环境变量和资源依赖 | 与Y3 me耦合 | 做了分析和抽取，实现可配置化<br />
+| 是否版本化管理 | 不支持 | 支持 |
+| 分层分包 | 架构分层，未分包维护，公共代码在yxyweb仓库 | 实现了分层分包的架构，支持通过扩展包的方式满足不同需求的开发者，解决目前框架大而全问题； |
+| 环境变量和资源依赖 | 与营销云、ys会有较多配置项的耦合 | 做了分析和抽取，实现可配置化<br />
   1、梳理CDN资源及依赖；<br />
   2、梳理服务依赖（接口、host等） |
-| 是否提供文档 | 之前有整理viewmodel相关文档 | 整理了体系化的文档结构（未全部完成）。地址：https://www.yuque.com/gpgy5k/ucf |
+| 是否提供文档 | 之前有整理viewmodel相关的体系化文档 | 整理了体系化的文档结构（未全部完成）。地址：https://www.yuque.com/gpgy5k/ucf |
 | 是否耦合原营销云Portal代码 | 框架耦合了营销云Portal代码 | 去耦合，不包含Portal代码 |
-| 开发调试门槛 | 需要登录营销云门户 | 精简调试 |
+| 开发调试门槛 | 需要登录营销云门户 | 精简调试，登录调试依赖业务方应用门户 |
 | 扩展元数据中控件类型(cControlType)的方式 | 框架通过依赖外部传入的文件路径的方式实现 | 支持V1.0，并提供扩展注册方式 |
-| BFF 层规范化分层 | 写法不规范 | 规范化写法 |
-| 　 | 　 | 　 |
+| 基于node的BFF 层规范化 | 写法不规范 | 梳理规范化写法 |
+| 是否提供node层插件机制 | 默认实现在yxyweb仓库 | 提取公共包并按模块发布，提供扩展方式 |
