--- a/docs/V1.0升级到V2.0迁移手册.md
+++ b/docs/V1.0升级到V2.0迁移手册.md
@@ -1,108 +1,116 @@
-目前yxyweb以源文件的方式存在项目的src目录中，每次更新yxyweb需要单独拉取代码，使用起来不灵活。现yxyweb以发包的形式管理，使用户只需关注业务代码，减少打包体积，方便操作。开发者需要在脚手架中修改webpack、babel相关配置。下面聊聊从node_modules中引入yxyweb具体操作。
+改造原有的`yxyweb`超大集合，拆分为@mdf/cube、@mdf/metaui-web、@mdf/middlewares-auth、@mdf/middlewares-log4js、@mdf/plugin-meta、@mdf/theme 等包目的是解耦版本化管理。
+
+**MDF2.0提供脚手架@mdf-app，可以使用该脚手架进行开发，不建议手动升级原有脚手架，这样误差较多**
 
 <a name="1UkmU"></a>
-## 1、安装yxyweb包
+## 1、安装依赖包
+由于MDF2.0的包不开源，故发布在内网ynpm仓库下，需要安装ynpm-tool工具，安装如下：
+> 外网可以VPN到集团内网也可以使用ynpm
 
-```javascript
-npm install -S yxyweb
+
+```bash
+# 安装工具到全局命令cli
+# 参考文档 https://package.yonyoucloud.com
+
+npm install ynpm-tool -g
+```
+
+安装对应依赖包，使用@mdf-app脚手架可以免去手动安装依赖
+
+```bash
+# 使用ynpm install来安装对应的@mdf包
+# 具体包如下：
+
+  "dependencies": {
+    "@mdf/cube": "^1.0.0",
+    "@mdf/metaui-mobile": "^1.0.0",
+    "@mdf/metaui-web": "^1.0.0",
+    "@mdf/metaui-web-ncc": "^1.0.0",
+    "@mdf/middlewares-auth": "^1.0.0",
+    "@mdf/middlewares-log4js": "^1.0.0",
+    "@mdf/plugin-meta": "^1.0.0",
+    "@mdf/theme": "^1.0.0"
+}
 ```
 
 <a name="cpeuc"></a>
 ## 2、修改webapck配置
-增加node_modules下yxyweb包解析<br />![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/192681/1560823187463-53563341-3adf-4f61-94d4-5df9e4bde045.png#align=left&display=inline&height=184&name=image.png&originHeight=368&originWidth=1586&size=83550&status=done&width=793)
+> 原有脚手架工程使用的是webpack3版本，最新MDF2.0中升级到最新的webpack4版本
+
+MDF2.0中，webpack做了以下修改：
+
+- 将多个配置文件合并。现在仅需要两个配置文件，webpack.dll.config.js和webpack.config.js，分别用来控制dll和应用的构建。
+- 升级了webpack版本至v4，然后相应地更新配置文件，可参见官方提供的[升级文档](https://webpack.js.org/migrate/4/)，主要包括两个部分：
+  - 添加mode属性，可选值为production和development
+  - 一些插件现在改为内置，不再需要引入了，如uglifyjs。
+
+```javascript
+var origin = [
+  path.resolve('src/common'),
+  path.resolve('src/client'),
+  path.resolve('node_modules/@mdf'),
+  path.resolve('src/mobile'),
+  path.resolve('src/web')
+];
+```
 
 <a name="YIFkC"></a>
-## 3、babel修改
-在module-resolver中修改alias属性，去掉yxyweb、将SvgIcon引入方式换成"./node_modules/yxyweb/common/components/common/SvgIcon.js"。<br />原babelrc修改                                                                        修改后的babelrc<br />![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/192681/1560822948702-b6c966ab-c7bd-437f-bae3-09f6581cdfe8.png#align=left&display=inline&height=110&name=image.png&originHeight=664&originWidth=1986&size=86768&status=done&width=326)          ![](http://design.yonyoucloud.com/static/yuque/0/2019/png/192681/1560823008002-2b8d72f6-5b7b-4adf-93ac-d71c6ce2512a.png#align=left&display=inline&height=107&originHeight=650&originWidth=2090&status=done&width=344)
+## 3、修改package.json启动命令
+使用mdf-app脚手架里面的package.json文件替换即可
 
-<a name="O4v7E"></a>
-## 4、node服务
-在node服务启动命令babel-node需要增加参数指的node_modules解析
-
-![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/192681/1560823322964-7d5a8421-3fd7-439a-a496-b9aff2f5a60d.png#align=left&display=inline&height=72&name=image.png&originHeight=144&originWidth=1976&size=305254&status=done&width=988)<br />最终配置
-```javascript
- "debug:server": "cross-env BABEL_ENV=production NODE_ENV=development SRV_URL=http://upc-server.test.app.yyuap.com PRINT_SERVER=http://uretailserver.yonyouup.com/print_service nodemon -w src/server -w src/common --exec babel-node --only='/node_modules/yxyweb/,/src' --inspect src/server/app.jsx",
-```
-<a name="yShvw"></a>
-## 
-<a name="pPs5q"></a>
-## 5、package.json
-yxyweb依赖项已经抽出到自己的dependencies中。
+<a name="F7Evq"></a>
+## 4、修改babel.config.js
 
 ```javascript
-"dependencies": {
-    "@antv/g6": "^3.0.4",
-    "antd": "2.12.6",
-    "antd-mobile": "2.1.6",
-    "art-template": "^3.0.3",
-    "async": "^2.0.0",
-    "classnames": "^2.2.5",
-    "cookies-js": "^1.2.2",
-    "dagre": "^0.8.4",
-    "echarts-for-react": "^1.4.4",
-    "fixed-data-table-2": "^0.8.12",
-    "isomorphic-fetch": "^2.2.1",
-    "js-beautify": "^1.6.3",
-    "keymirror": "^0.1.1",
-    "koa": "^2.0.0",
-    "koa-bodyparser": "^3.1.0",
-    "koa-compress": "^2.0.0",
-    "koa-logger": "^2.0.0",
-    "koa-router": "^7.0.1",
-    "koa-static": "^3.0.0",
-    "lodash": "^4.17.4",
-    "mkdirp": "^0.5.1",
-    "moment": "^2.17.1",
-    "prop-types": "^15.5.10",
-    "immutable": "^3.8.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-amap": "^1.0.1",
-    "react-color": "^2.10.0",
-    "react-countup": "^3.0.3",
-    "react-loadable": "^5.3.1",
-    "react-redux": "^5.0.2",
-    "react-router": "^3.0.2",
-    "react-router-redux": "^4.0.7",
-    "react-draggable-tags": "^0.3.4",
-    "react-signature-canvas": "^1.0.1",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0",
-    "uuid": "^3.0.1",
-    "warning": "^3.0.0",
-    "yardformdata": "^1.0.8",
-    "shortid":"^2.2.14",
-    "ramda":"0.25.0"
+module.exports = {
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-react"
+  ],
+  "plugins": [
+    [
+      "module-resolver",
+      {
+        "alias": {
+          "src": process.env.MDF_TARGET === "mobile" ? "./src/mobile" : "./src/web",
+          "web": "./src/web",
+          "client": "./src/client",
+          "business": "./src/business",
+          "static": "./static"
+        }
+      }
+    ],
+    "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-syntax-import-meta",
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-json-strings",
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "legacy": true
+      }
+    ],
+    "@babel/plugin-proposal-function-sent",
+    "@babel/plugin-proposal-export-namespace-from",
+    "@babel/plugin-proposal-numeric-separator",
+    "@babel/plugin-proposal-throw-expressions",
+    "@babel/plugin-proposal-export-default-from",
+    "@babel/plugin-proposal-logical-assignment-operators",
+    "@babel/plugin-proposal-optional-chaining",
+    [
+      "@babel/plugin-proposal-pipeline-operator",
+      {
+        "proposal": "minimal"
+      }
+    ],
+    "@babel/plugin-proposal-nullish-coalescing-operator",
+    "@babel/plugin-proposal-do-expressions"
+  ],
+  "env": {
+    "development": {
+      "plugins": [ 'react-hot-loader/babel' ]
+    }
   }
+}
+
 ```
-
-因此需要将项目中无用的依赖去掉。最终项目中dependencies是类似下面这样
-
-```javascript
-"dependencies": {
-    "axios": "^0.18.0",
-    "es6-promise": "^3.2.1",
-    "immutable": "^3.8.1",
-    "invariant": "^2.2.1",
-    "log4js": "^1.0.1",
-    "qrcode.react": "^0.8.0",
-    "react": "^15.4.2",
-    "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.2",
-    "react-router": "^3.0.2",
-    "react-router-redux": "^4.0.7",
-    "react-touch-screen-keyboard": "^0.3.15",
-    "redux-logger": "^2.6.1",
-    "request": "^2.81.0",
-    "winston": "^2.2.0",
-    "yardformdata": "^1.0.9",
-    "yxyweb": "^0.0.10"
-  },
-```
-
-<a name="KodG8"></a>
-## 特殊注意
-
-- yxyweb和业务代码中数据、组件会相互依赖，因此确保依赖外部包版本一致。eg:immutable、react等
-- 删除src/yxyweb文件夹，业务中引入yxyweb方式都换成'yxyweb/...'。
