--- a/docs/扩展开发-打印.md
+++ b/docs/扩展开发-打印.md
@@ -1,162 +1,73 @@
-功能概述<br />      目前打印组件实现了打印预览、打印设计、直接打印功能。直接打印目前只支持WInodws系统。用户可以在excel中自定义打印按钮的布局。下面是以dropdown形式你实现的。![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/192681/1560390193991-f4ca6df3-5fdb-4bdd-8663-88bdad57a68c.png#align=left&display=inline&height=200&name=image.png&originHeight=400&originWidth=936&size=46212&status=done&width=468)
-<a name="rQ07z"></a>
-### 使用方式
-增加PRINT_META参数，将打印的公共参数提取出来。目前支持package.json、env扩展两种方式。package.json优先级高于env扩展，但是可读性稍微差些。
-<a name="i0IXz"></a>
-#### <br />增加PRINT_META参数
-<a name="QxiO2"></a>
-##### 修改package.json
-在启动命令中增加PRINT_META相关的打印参数。
+功能概述<br />      目前打印组件实现了打印预览、打印设计、直接打印功能。用户可以在excel中自定义打印按钮的布局。下面是以dropdown形式你实现的。那如何实现打印功能呢，需要用户增加环境变量、excel配置。<br />![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/192681/1560390193991-f4ca6df3-5fdb-4bdd-8663-88bdad57a68c.png#align=left&display=inline&height=200&name=image.png&originHeight=400&originWidth=936&size=46212&status=done&width=468)
+<a name="fdexG"></a>
+### 环境变量配置
+在src/common/config.env.js 下定义打印相关参数配置。<br />1、print_url: 连接打印的后台地址，不同环境地址会不同。具体地址值在备注中有说明。<br />2、domainCode：域code值，不同业务code值不同。具体值可以咨询云打印人员。
 
-```javascript
-debug:client": "cross-env  BABEL_ENV=development PRINT_META=\"{\\\"domainCode\\\":\\\"jcjm\\\",\\\"printPreviewUrl\\\":\\\"http://u8cprint.test.app.yyuap.com/u8cprint/design/getPreview\\\",\\\"printDesignUrl\\\":\\\"http://u8cprint.test.app.yyuap.com/u8cprint/design/getDesign\\\"}\" webpack-dev-server --progress --colors  --config webpack.dev.config.js",
-```
-
-具体PRINT_META参数配置说明如下：
-
-| domainCode | 领域名称 |
-| --- | --- |
-| printPreviewUrl | 请求预览URL |
-| printDesignUrl | 请求打印设计URL |
-
-<a name="05vhw"></a>
-##### env扩展
-在'src/server/env/index.js'文件夹下增加PRINT_META变量,并将变量抛出。
-
-```javascript
-const PRINT_META = JSON.parse(process.env.PRINT_META) || {
-  domainCode:'jcjm',
-  printDomain:'https://u8cprint-daily.yyuap.com',
-  printDownLoad:'https://cdn.yonyoucloud.com/iprint/用友云打印助手.exe'
-}
-
-const env = {
-···
-  PRINT_META:PRINT_META,
-···
-}
-
-```
-在'src/server/middlewares/viewhook/html.jsx'中定义环境变量window.__PRINT_META__
-
-```javascript
-const printMeta = env.PRINT_META;
-.....
-<script>
-      window.__INITIAL_STATE__ = ${JSON.stringify(state)}
-      window.__PRINT_META__ = ${JSON.stringify(printMeta)}
- </script>
-```
-
-
-<a name="lt7Qr"></a>
-#### webpack配置
-DefinePlugin中增加process.env.PRINT_META参数。
-
-
-```javascript
-new webpack.DefinePlugin({
-      'process.env.NODE_ENV': '"development"',
-      'process.env.__CLIENT__': 'true',
-      'process.env.PRINT_META':JSON.stringify(process.env.PRINT_META)
-    ),
-```
-
-
-<a name="1Iiu0"></a>
-#### excel配置
-在Excel中配置[bill_command]，首先需要增加打印按钮，配置方式跟之前一样，除此之前还需要增加paramter、action参数配置。下面为具体的paramter配置说明
+<a name="3jqjO"></a>
+### excel配置
+首先需要增加打印按钮，配置方式跟普通按钮一样，在Excel中配置[bill_command]表时需要增加paramter、action参数配置。下面为具体的paramter配置说明，其中打印模板printcode、类别编码classifyCode值可向云打印人员咨询。<br />**打印模板printcode**：打印模板是先找云打印人员开通一个数据库，每个领域都有一个，然后总共多少应用下多少个服务需要打印。当我们打开打印模板节点，就能看到模板类别了。<br />**类别编码classifyCode**：可以支持切换同类别下不同模板打印。预置模板的时候，可以打印的字段，是根据类别编码来查的，比如我给的EMM.emm_pcplan_card，他就会查emm_pcplan_card这个页面的所有字段，都可以配置出来，我这边查询也按照emm_pcplan_card来查询，确保他配置的字段我都能查询出来，这样打印才不会出现打印不出来字段情况
 <a name="7JXeZ"></a>
-#### bill_command
+#### 
+<a name="ZpPQM"></a>
+#### 打印预览
 
-  - 打印预览
+  - paramter对象字段说明
 | 属性名称 | 含义 | 备注 |
 | --- | --- | --- |
 | printcode | 打印模板 | eg:"voucher_system_default_20190515" |
-| tenantId | 租户id | 后端后期会自动处理 |
-| serverUrl | 数据源请求的url |  |
-| params | 请求数据的参数 | eg:{"metaurl":"bd.currencytenant.CurrencyTenantVO"} |
-| meta | 1数据源是是元数据0否 | 默认是1，非必填 |
+| classifyCode | 类别编码 |  |
+| serverUrl | 数据源请求的url，打印时会通过serverUrl请求业务数据 | 可以通过扩展脚本实现，参考下面的扩展API |
+| params | 请求业务数据时，会根据此参数进行筛选，具体由业务来定 | 可以通过扩展脚本实现 |
+|  |  |  |
 
 
 <br />整体配置如下：
 ```javascript
-{"tenantId":"lfvukx6f","printcode":"voucher_system_default_20190515","params":{"metaurl":"bd.currencytenant.CurrencyTenantVO","serverUrl":"http://ucfbasedoc.test.app.yyuap.com/meta/attribute"}}
+{"printcode":"emm_pcplan_card_print"，"classifyCode":"EMM.emm_pcplan_card"}
 ```
 
+  - action字段说明
 
-  - 打印设计
+                打印预览的action字段为printpreview
 
+<a name="0Ozap"></a>
+#### 打印设计
 
-
-
+  - paramter对象字段说明
 | 属性名称 | 含义 | 备注 |
 | --- | --- | --- |
 | printcode | 打印模板 | eg:"voucher_system_default_20190515_20190515" |
-| tenantId | 租户id | 后端后期会自动处理，非必填 |
-| meta | 1数据源是是元数据0否 | 默认是1，非必填 |
 
 
 <br />整体配置如下：
 ```javascript
-{"printcode":"voucher_system_default_20190515","tenantId":"lfvukx6f"}
+{"printcode":"voucher_system_default_20190515"}
 ```
 
-<br />
+  - action字段说明
 
-  - 直接打印
+                打印预览的action字段为printdesign<br />
+
+<a name="n4VQo"></a>
+#### 直接打印
+
+  - paramter对象字段说明
 | 属性名称 | 含义 | 备注 |
 | --- | --- | --- |
 | printcode | 打印模板 | eg:"voucher_system_default_20190515" |
 | serverUrl | 数据源请求的url |  |
 | params | 请求数据的参数 | eg:{"metaurl":"bd.currencytenant.CurrencyTenantVO"} |
-| meta | 1数据源是是元数据0否 | 默认是1，非必填 |
 
 
-
-<br />整体配置如下：
+整体配置如下：
 ```javascript
 {"templateCode": "voucher_system_default_20190515","tenantId": "lfvukx6f",  "params": { "metaurl": "bd.currencytenant.CurrencyTenantVO" },"serverUrl":"http://ucfbasedoc.test.app.yyuap.com/meta/attribute"  }
 ```
 
 
-<a name="53rfT"></a>
-#### 
-下面为bill_command这张表中action字段的具体说明
+  - action字段说明
 
-| 打印类型 | action |
-| --- | --- |
-| 打印设计 | printdesign |
-| 打印预览 | printpreview |
-| 立即打印 | printnow |
-
-使用mdf1.0版本需要在自己的脚手架中添加node端的直接打印请求。在src/server/controllers/fileUpload里面添加如下逻辑
-
-```javascript
-import {doFetch} from 'yxyweb/server/controllers/common'
-
-
-
-
-
-
- printNow: async function(ctx) {
-   let postData = ctx.request.body;
-   const url = 'http://10.11.64.52:9641/directprint';
-   let options = {
-     'method': 'POST',
-     'headers': {
-       'cookie': ctx.request.header.cookie,
-       'content-type': 'application/json;charset=UTF-8',
-       ...postData
-     }
-   };
-   let results;
-   results = await doFetch(url, options);
-
-   ctx.body = results;
- }
-```
+                打印预览的action字段为printnow
 
 <a name="8A4zM"></a>
 ### 扩展API
@@ -164,10 +75,20 @@ import {doFetch} from 'yxyweb/server/controllers/common'
 - beforePrintpreview 打印预览之前的回调，用户可以动态的修改params参数
 
 ```javascript
-bisViewModel.on('beforePrintpreview',(params)=>{
+ViewModel.on('beforePrintpreview',(params)=>{
 
    let cmdParameter = JSON.parse( params.cmdParameter);
    //动态的修改cmdParameter内容
+   cmdParameter.serverUrl = '请求数据的url';
+   
+   cmdParameter.params = '请求数据所需要的参数';
+   //例如下面代码：
+   //cmdParameter.serverUrl = window.__SERVER_URL__.SRV_URL + "/bill/getPrintData";
+   //let billNo = viewmodel.getParams().billNo;
+   //const ids = [viewmodel.get("id").getValue()];
+   //cmdParameter.params = {
+   //   ids: ids, billno: billNo,
+   //}
    
    //最后将修改后的内容赋值给params；
    data.params.cmdParameter = JSON.stringify(cmdParameter);
