--- a/docs/前端-国际化方案.md
+++ b/docs/前端-国际化方案.md
@@ -75,7 +75,7 @@ module.exports={
   },
   "zhtw": {
     "YS_FI_FP_000003484632": "大前端技術部",
-  }
+  },
   "enus": {
     "YS_FI_FP_000003484632": "FED",
   }
@@ -165,7 +165,7 @@ module.exports={
   },
   "zhtw": {
     "YS_FI_FP_000003484632": "大前端技術部",
-  }
+  },
   "enus": {
     "YS_FI_FP_000003484632": "FED",
   }
@@ -180,7 +180,7 @@ module.exports={
 #### MDF 2.0 项目中资源国际化
  
 
-1. **组织 pack.js 文件，包含需要的语种,放到mdf-app/src/web/pack.js 下。**
+1. **组织 pack.js 文件，包含需要的语种,放到mdf-app/src/pack.js 下。**
 
 
 
@@ -191,7 +191,7 @@ module.exports={
   },
   "zhtw": {
     "YS_FI_FP_000003484632": "大前端技術部",
-  }
+  },
   "enus": {
     "YS_FI_FP_000003484632": "FED",
   }
@@ -301,11 +301,8 @@ new webpack.DefinePlugin({
     "@mdf/baseui": "lang",
     "@mdf/cube": "lang", 
     "@mdf/metaui-web": "lang",
-    "@mdf/metaui-web-ncc": "lang",
     "@mdf/middlewares-auth": "lang",
-    "@mdf/middlewares-log4js": "lang",
-    "@mdf/plugin-meta": "lang",
-    "@mdf/theme": "lang"
+    "@mdf/plugin-meta": "lang"
 }
 ```
 
