--- a/docs/提取工具入门篇.md
+++ b/docs/提取工具入门篇.md
@@ -10,13 +10,13 @@
 
 ```javascript
 type=java/jsx,js    
-
 localres=true
+respath=D:/lang-tool/resources
 ```
 
 > 1. type java 或 react
 > 1. localres是否要本地操作，不连接任何服务。当你在本地调试好后，最后抽取一次，可以把这行注释掉。
-> 
+> 1. respath 资源输出目录
 
 5. 拼接抽取命令
 
