--- a/docs/部署与集成对接.md
+++ b/docs/部署与集成对接.md
@@ -1,1 +1,73 @@
-<span />
+在代码准备完毕，需要上线的时候，可以按如下的方式进行：
+<a name="RejPG"></a>
+## 安装依赖
+使用 ynpm install 安装工程中的依赖。目前稳定的ynpm-tool版本是3.2.4。可以用 npm install -g ynpm-tool 来安装它。
+<a name="NY0if"></a>
+## 构建工程
+构建过程分为两个部分：node端和client端。<br />一般构建步骤会写在 package.json中，直接 npm run build 即可，有自定义需求的在各自工程中修改即可。<br />构建node端的过程，是使用 babel 将es6语法转换成es5语法。<br />构建client端的过程，则是使用webpack将应用打包成bundle文件。
+<a name="GzS8G"></a>
+## 启动工程
+以mdf脚手架为模板构建的项目中，正式运行的时候只需要运行node端即可。client端的文件通过node端的静态文件服务提供。<br />一般来说，启动命令是 `NODE_ENV=production SERVER_ENV=prod node bin/web/server/index.js`这样的，且一般也会将这条命令写在 package.json 中 start script里面，所以直接运行 npm start 就可以了。
+
+不过在执行部署的时候，还有更多的方式供选择。
+<a name="sQJRM"></a>
+### PM2
+pm2是一个keep alive的工具，能在服务崩溃时自动重启。脚手架mdf-app中提供了默认的pm2.json配置文件。<br />一般直接运行 `pm2 start .` 即可启动服务。<br />附pm2配置文件：
+
+```json
+{
+    "apps": [{
+        "name": "MDF",
+        "cwd": "./",
+        "script": "./bin/web/server/index.js",
+        "env": {
+            "NODE_ENV": "production",
+            "SERVER_PORT": 3006,
+            "SRV_URL": "http://127.0.0.1:8000"      
+        },
+        "log_date_format": "YYYY-MM-DD HH:mm:ss",
+        "error_file": "./logs/error.log",
+        "out_file": "./logs/app.log",
+        "instances": 1,
+        "min_uptime": "60s",
+        "max_restarts": 10,
+        "max_memory_restart": "1024M",
+        "watch": false,
+        "merge_logs": true,
+        "exec_interpreter": "node",
+        "exec_mode": "fork",
+        "autorestart": true,
+        "vizion": false
+    }]
+}
+```
+
+启动之前，需要确认下环境变量配置是否符合需要。环境变量存储在 pm2.json 文件中的 env 一节中。
+
+<a name="hkec6"></a>
+### 集成部署流水线
+新建流水线相关的相关配置此处略过不写。主要讲流水线中的配置。<br />首先，流水线基于Docker部署应用，需要提供一份Dockerfile，可加在项目顶层Dockerfile文件中，或在流水线中配置。Dockerfile中应完成代码的拷贝、依赖的安装、应用的构建等过程。
+
+示例Dockerfile:
+
+```dockerfile
+FROM ycr.yonyoucloud.com/base/node:10-alpine
+RUN    apk update   \
+       &&  apk del git\
+       &&  apk add git \
+       &&  npm config set unsafe-perm true 
+
+WORKDIR /code
+
+ADD ./ /code
+
+RUN  ynpm install && npm run build
+
+EXPOSE 3003
+
+CMD ["npm start"]
+```
+
+最后的CMD可以从 `npm start` 换成 `pm2 start`，视具体需求而定。
+
+keep alive机制不一定需要pm2，使用k8s健康检查+多实例部署也能实现，如果不了解的话可直接使用 pm2，或咨询运维。
