--- a/docs/前端-国际化方案.md
+++ b/docs/前端-国际化方案.md
@@ -4,13 +4,16 @@
 优点
 
 1. 直接上传源码，把源码转换成标签的形式，能兼容react、jquery 等。
-1. 一套资源，通过标签的属性，来进行多语的查找、替换。
-1. 有线上工具。
+
+2. 一套资源，通过标签的属性，来进行多语的查找、替换。
+
+3. 有线上工具。
 
 缺点
 
 1. 属于半自动化工具，不支持变量，没有对中文语意，进行区分。
-1. 需要维护编译后的代码。
+
+2. 需要维护编译后的代码。
 
 [专属化国际化](http://pap-i18n.online.app.yyuap.com/I18n/i18n/index.html#/)[在线]()[生成]()[资源]()
 
@@ -18,13 +21,18 @@
 ## i18n 多语
 
 1. 把代码打包成多套资源源码。
-1. 提供工具进行快速编译，不用维护编译后的代码。
+
+2. 提供工具进行快速编译，不用维护编译后的代码。
 <a name="50P3Y"></a>
+## 
+<a name="PIZq2"></a>
 ## 我们采用的多语方案
 
 1. 一套源码，通过多套静态资源进行加载。
-1. 在静态资源、翻译文档中可以穿插变量、利用 Underscore 模版引擎的－template进行替换。
-1. 在渲染之前还可以做自定义的规则渲染。
+
+2. 在静态资源、翻译文档中可以穿插变量、利用 Underscore 模版引擎的－template进行替换。
+
+3. 在渲染之前还可以做自定义的规则渲染。
 
 <a name="7d3e85cc"></a>
 ## 前端多语
@@ -35,8 +43,8 @@
 > 1. 多语访问方式:
 > 
 通过http://ip:8080?locale=zh-CN/zh-TW/en-US 进行多语切换、cookie均可。
+> 
 > 2. [多语服务平台](http://workbench.yyuap.com/multilang-fe/#/dev)
-> 2. <br />
 > 
 
 
