样式调整、doc更新

--- a/docs/查询方案扩展.md
+++ b/docs/查询方案扩展.md
@@ -1,9 +1,3 @@
-> 创建者：姚磊
-> 创建时间：2019-10-17
-> 修改者：
-> 修改时间：
-
-
 <a name="hZaiY"></a>
 # 查询方案扩展
 由于查询区的UI元数据不随标准协议接口返回，在单据的扩展脚本的viewmodel中无法获取查询区的字段模型，因此查询区可以增加单独的扩展脚本，在扩展脚本中实现类似模板扩展脚本中的交互。查询区扩展脚本也是放在business文件夹中。
@@ -37,3 +31,68 @@ proxy.getInitFilterInfo(params, function (errors, results) {
 <a name="KxM8q"></a>
 ## 3 使用方式
 查询区扩展脚本的使用方式和单据扩展一致。
+
+```javascript
+cb.define([ 'common/common_list_VM.Extend.js' ], function(common) {
+    var emm_emm_inspectstd_list_filterVM_Extend = {
+        doAction: function(name, viewmodel) {
+            if (this[name]) {
+                this[name](viewmodel);
+            }
+        },
+        init: function(viewmodel) {
+            common.initOrgFilter(viewmodel, 'pk_org');
+            common.initCardFilter(viewmodel, 'pk_org', 'pcstdlkvos__pk_equip');
+        }
+    };
+    try {
+        module.exports = emm_emm_inspectstd_list_filterVM_Extend;
+    } catch (error) {
+        console.log(error);
+    }
+    return emm_emm_inspectstd_list_filterVM_Extend;
+});
+
+```
+
+
+<a name="s2w2e"></a>
+## 4、典型场景
+点击查询区搜索按钮时，在请求之前修改请求参数。实现根据具体的参数请求数据。
+
+```javascript
+cb.define([], function () {
+  var PC_pc_productlist_filterVM_Extend = {
+    doAction: function (name, viewmodel) {
+      if (this[name])
+        this[name](viewmodel);
+    },
+init: function (viewmodel) {
+//点击查询区搜索按钮前，将字段参数传入
+      viewmodel.on('beforeSearch', function (args) {
+         //设置具体的查询条件 
+         var condition = {
+						"isExtend": true,
+						simpleVOs: []
+					};
+        	//字段stopstatus等于0的数据进行查询
+					condition.simpleVOs.push({
+						field: 'stopstatus',
+						op: 'eq',
+						value1: 0
+					});
+					this.setFilter(condition);
+      });
+    }
+  }
+  try {
+    module.exports = PC_pc_productlist_filterVM_Extend;
+  } catch (error) {
+
+  }
+  return PC_pc_productlist_filterVM_Extend;
+});
+
+```
+
+args(为请求参数内容)参数说明:<br />commonVOs：需过滤配置了对应的过滤项<br />simpleVOs：根据自己的后台元数据描述
