--- a/docs/模板级扩展.md
+++ b/docs/模板级扩展.md
@@ -91,6 +91,11 @@ cb.define(['common/common_VM.Extend.js'], function (common) {
 });
 ```
 
+- define参数说明：
+加载依赖的公共扩展脚本
+- doAction：框架中加载扩展脚本的入口
+- init：初始化整个扩展脚本
+
 在扩展脚本中，可以获取页面控件层面的viewmodel，调用相关viewmodel的API实现具体的特定的交互。可以通过相关api 获取当前页面UI组件所对应的viewmodel对象， 通常扩展业务逻辑一般都写在init函数内。
 
 <a name="SCCPN"></a>
@@ -135,7 +140,7 @@ init: function (viewmodel) {
 
 <a name="T02Fv"></a>
 #### 3.4 相关API参考文档
-参考前端编程模型章节。
+参考[数据模型相关API](https://www.yuque.com/gpgy5k/ucf/cx96ve)。
 
 <a name="kRVCh"></a>
 #### 3.5 抽取公共逻辑
