--- a/docs/全球化多语方案.md
+++ b/docs/全球化多语方案.md
@@ -1,6 +1,6 @@
 ![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/319615/1571141167969-ca2db22f-7a13-4d0d-8754-4ad6be233a71.png#align=left&display=inline&height=416&name=image.png&originHeight=490&originWidth=878&search=&size=169025&status=done&width=746)
 
 
-2. 前端组件替换-->提取-->翻译上线流程
+2. 前端流程
 
-![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/319615/1571646232194-a3317324-5668-46b0-89f3-d10e9cfa3cc4.png#align=left&display=inline&height=214&name=image.png&originHeight=428&originWidth=1146&search=&size=132379&status=done&width=573)
+![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/319615/1573011268777-b201a383-f9f6-4de0-984f-c8e90672ced8.png#align=left&display=inline&height=1587&name=image.png&originHeight=1587&originWidth=1123&search=&size=77161&status=done&width=1123)
