--- a/docs/关键特性及应用场景.md
+++ b/docs/关键特性及应用场景.md
@@ -1,5 +1,5 @@
 - [x] 支持通过模式化的配置自动生成并渲染页面，常见的模式化布局模式请参见相关文档；
-- [x] 集成了bpaas业务中台的支撑服务和能力中心相关能力，提供运行时业务能力；
+- [x] 集成了bpaas业务中台的支撑服务和能力中心相关能力（打印服务、审批服务、编码规则、权限服务、导入导出、参照服务、查询模板、规则引擎、自定义项等），提供运行时业务能力；
 - [x] 支持两种模板风格：YonSuite交互风格和NCCloud交互风格
 - [x] 多端开发框架统一：Web开发和Mobile移动开发共用一套开发框架，共用一套扩展脚本
 - [x] 分层架构，分包解耦，架构灵活
