--- a/docs/各业务项目前端负责人邮件列表.md
+++ b/docs/各业务项目前端负责人邮件列表.md
@@ -1,55 +1,55 @@
-| 领域/产品线 | 项目名称 | 业务负责人 | 前端负责人 | 备注 |
-| :---: | :---: | :---: | :---: | :---: |
-| 云平台<br />iuap5.0 | bpaas-组织中心 | 严明 | 刘延瑞、张辉 |  |
-|  | bpaas-基本档案 | 严明 | 谢竹、吴惊道、王烁程 |  |
-|  | bpaas-员工中心 | 严明 | 刘延瑞、张辉 |  |
-|  | 开发平台-UI设计器 | 李传忠 | 朱子健 |  |
-|  | 开发平台-ys租户开发示例 | 杨亮、李传忠 | 赵宇 |  |
-|  | 开发平台-模板管理 | 勾成图 |  |  |
-| 领域云<br />（营销云） | 营销云-友零售（移动App） | 　 |  | mdf1.0 |
-|  | 营销云-友零售 | 李会东 | 方奇功 | mdf1.0 |
-|  | 营销云-促销中心 | 姚学东 |  | mdf1.0 |
-|  | 营销云-自动化营销 | 姚学东 |  | mdf1.0 |
-|  | 营销云-电商通 | 孙健 |  | mdf1.0 |
-| 成长型<br />企业云服务<br />YonSuite | YS基础服务-角色管理 | 徐玉炎 | 李海双 |  |
-|  | YS基础服务-授权 | 唐坤 | 李海双、邢永超 |  |
-|  | YS基础服务-参数设置 | 唐坤 | 李海双、邢永超 |  |
-|  | YS基础服务-数据权限 | 唐坤 | 李海双 |  |
-|  | YS基础服务-物料（物料、物料分类、物料属性） | 陈鸿远 | 董海洋 |  |
-|  | YS基础服务-客户 | 陈鸿远 | 董海洋 |  |
-|  | YS基础服务-项目 | 陈鸿远 | 董海洋 |  |
-|  | YS基础服务-供应商 | 陈鸿远 | 董海洋 |  |
-|  | YS基础服务-业务档案 | 陈鸿远 | 董海洋 |  |
-|  | YS营销云（采购委外） | 　 | 　 |  |
+| 领域/产品线 | 项目名称 | 业务负责人 | 前端负责人 | 框架负责团队 | 备注 |
+| :---: | :---: | :---: | :---: | :---: | :---: |
+| 云平台<br />iuap5.0 | bpaas-组织中心 | 严明 | 刘延瑞、张辉 | 中台公共服务团队 | mdf2.0 |
+|  | bpaas-基本档案 | 严明 | 谢竹、吴惊道、王烁程 | 中台公共服务团队 | mdf2.0 |
+|  | bpaas-员工中心 | 严明 | 刘延瑞、张辉 | 中台公共服务团队 | mdf2.0 |
+|  | 开发平台-UI设计器 | 李传忠 | 朱子箭 | 大前端技术部 | mdf2.0 |
+|  | 开发平台-ys租户开发示例 | 杨亮、李传忠 | 赵宇 | 大前端技术部 | mdf2.0 |
+|  | 开发平台-模板管理 | 勾成图 |  | 中台公共服务团队 | mdf2.0 |
+| 领域云<br />（营销云） | 营销云-友零售（移动App） | 　 |  | 营销云公共前端团队 | mdf1.0 |
+|  | 营销云-友零售 | 李会东 | 方奇功 | 营销云公共前端团队 | mdf1.0 |
+|  | 营销云-促销中心 | 姚学东 |  | 营销云公共前端团队 | mdf1.0 |
+|  | 营销云-自动化营销 | 姚学东 |  | 营销云公共前端团队 | mdf1.0 |
+|  | 营销云-电商通 | 孙健 |  | 营销云公共前端团队 | mdf1.0 |
+| 成长型<br />企业云服务<br />YonSuite | YS基础服务-角色管理 | 徐玉炎 | 李海双 | 中台公共服务团队 | mdf2.0 |
+|  | YS基础服务-授权 | 唐坤 | 李海双、邢永超 | 中台公共服务团队 | mdf2.0 |
+|  | YS基础服务-参数设置 | 唐坤 | 李海双、邢永超 | 中台公共服务团队 | mdf2.0 |
+|  | YS基础服务-数据权限 | 唐坤 | 李海双 | 中台公共服务团队 | mdf2.0 |
+|  | YS基础服务-物料（物料、物料分类、物料属性） | 陈鸿远 | 董海洋 | 营销云公共前端团队 | mdf2.0 |
+|  | YS基础服务-客户 | 陈鸿远 | 董海洋 | 营销云公共前端团队 | mdf2.0 |
+|  | YS基础服务-项目 | 严明 | 刘延瑞 | 中台公共服务团队 | mdf2.0 |
+|  | YS基础服务-供应商 | 陈鸿远 | 董海洋 | 营销云公共前端团队 | mdf2.0 |
+|  | YS基础服务-业务档案 | 陈鸿远 | 董海洋 | 营销云公共前端团队 | mdf2.0 |
+|  | YS营销云-采购委外 | 　 | 　 | 营销云公共前端团队 | mdf2.0 |
 |  | YS营销云-库存管理 | 采购：何兵<br />
-    库存：李宏坤 | 方奇功 |  |
-|  | YS营销云-u订货 | 赵印 | 冯文兵 |  |
-|  | YS成本云 | 廖年兵 | 　 |  |
-|  | YS制造云-工程数据 | 杨庆峰（YS制造） | 李超 |  |
-|  | YS制造云-生产订单 | 杨庆峰（YS制造） | 李超 |  |
-|  | YS制造云-物料需求 | 杨庆峰（YS制造） | 李超 |  |
-|  | YS财务云-固定资产 | 焦国海 | 刘云燕 |  |
-|  | YS财务云-存货核算 | 焦国海 | 刘云燕 |  |
-|  | YS财务云-内部交易 | 焦国海 | 刘云燕 |  |
-|  | YS财务云-应收、应付 | 焦国海 | 刘云燕 |  |
-|  | YS财务云-现金管理 | 焦国海 | 刘云燕 |  |
-|  | YS财务云-总账管理 | 焦国海 | 刘云燕 |  |
-|  | YS采购云-采购需求 | 杨波 | 宋江凌 | 未升级 |
-|  | YS采购云-采购寻源 | 杨波 | 宋江凌 | 未升级 |
-|  | YS采购云-采购协同 | 杨波 | 宋江凌 | 未升级 |
-|  | YS采购云-供应商管理 | 杨波 | 宋江凌 | 未升级 |
-| 高端领域云<br />（资产云） | NC 资产云 | 孔繁禹 | 吴晓亮、卢殿琳 |  |
-| 高端领域云<br />（制造云） | 能源管理 | 陆家骏 | 张北冰 |  |
-|  | 安环管理 | 陆家骏 | 丁永浩 |  |
-|  | 工厂模型 | 陆家骏 | 汪嘉文 |  |
-|  | 冶金规范 | 贾小勇 | 　 |  |
-|  | 设备管理 | 　 | 张田田、梁莉莉 | cn开发模式 |
-|  | 装备后服务 |  | 吴运刚 | cn开发模式 |
-|  | iOT监视告警服务 | 　 | 刘稳舵 | cn开发模式 |
-|  | 设备管理 | 贾小勇 | 吴运刚 | cn开发模式 |
-|  | 装备后服务 | 贾小勇 | 吴运刚 | cn开发模式 |
-|  | IOT前端 | 齐国印 | 齐国印 | cn开发模式 |
-|  | 设备监视 | 陆家骏 | 李加金 | cn开发模式 |
+    库存：李宏坤 | 方奇功 | 营销云公共前端团队 | mdf2.0 |
+|  | YS营销云-u订货 | 赵印 | 冯文兵 | 营销云公共前端团队 | mdf2.0 |
+|  | YS成本云 | 廖年兵 | 　 | 营销云公共前端团队 | mdf2.0 |
+|  | YS制造云-工程数据 | 杨庆峰（YS制造） | 李超 | 营销云公共前端团队 | mdf2.0 |
+|  | YS制造云-生产订单 | 杨庆峰（YS制造） | 李超 | 营销云公共前端团队 | mdf2.0 |
+|  | YS制造云-物料需求 | 杨庆峰（YS制造） | 李超 | 营销云公共前端团队 | mdf2.0 |
+|  | YS财务云-固定资产 | 焦国海 | 刘云燕 | 大前端技术部 | mdf2.0 |
+|  | YS财务云-存货核算 | 焦国海 | 刘云燕 | 大前端技术部 | mdf2.0 |
+|  | YS财务云-内部交易 | 焦国海 | 刘云燕 | 大前端技术部 | mdf2.0 |
+|  | YS财务云-应收、应付 | 焦国海 | 刘云燕 | 大前端技术部 | mdf2.0 |
+|  | YS财务云-现金管理 | 焦国海 | 刘云燕 | 大前端技术部 | mdf2.0 |
+|  | YS财务云-总账管理 | 焦国海 | 刘云燕 | 大前端技术部 | mdf2.0 |
+|  | YS采购云-采购需求 | 杨波 | 宋江凌 | 中台公共服务团队 | 未升级 |
+|  | YS采购云-采购寻源 | 杨波 | 宋江凌 | 中台公共服务团队 | 未升级 |
+|  | YS采购云-采购协同 | 杨波 | 宋江凌 | 中台公共服务团队 | 未升级 |
+|  | YS采购云-供应商管理 | 杨波 | 宋江凌 | 中台公共服务团队 | 未升级 |
+| 高端领域云<br />（资产云） | NC 资产云 | 孔繁禹 | 吴晓亮、卢殿琳 | 大前端技术部 |  |
+| 高端领域云<br />（制造云） | 能源管理 | 陆家骏 | 张北冰 | 大前端技术部 |  |
+|  | 安环管理 | 陆家骏 | 丁永浩 | 大前端技术部 |  |
+|  | 工厂模型 | 陆家骏 | 汪嘉文 | 大前端技术部 |  |
+|  | 冶金规范 | 贾小勇 | 　 | 大前端技术部 |  |
+|  | 设备管理 | 　 | 张田田、梁莉莉 | 大前端技术部 | cn模式 |
+|  | 装备后服务 |  | 吴运刚 | 大前端技术部 | cn模式 |
+|  | iOT监视告警服务 | 　 | 刘稳舵 | 大前端技术部 | cn模式 |
+|  | 设备管理 | 贾小勇 | 吴运刚 | 大前端技术部 | cn模式 |
+|  | 装备后服务 | 贾小勇 | 吴运刚 | 大前端技术部 | cn模式 |
+|  | IOT前端 | 齐国印 | 齐国印 | 大前端技术部 | cn模式 |
+|  | 设备监视 | 陆家骏 | 李加金 | 大前端技术部 | cn模式 |
 
 
 <a name="9qyfC"></a>
