--- a/docs/协议字段常见问题解答.md
+++ b/docs/协议字段常见问题解答.md
@@ -1,5 +1,4 @@
 > 创建者：姚磊
-
 > 创建时间：2019-05-12
 > 修改者：
 > 修改时间：
@@ -15,3 +14,4 @@
 - 3、Button和PrimaryButton的区别？
   - 两者实际渲染都是通过Button 组件渲染的，不一样的是，PrimaryButton在Button组件上加了type='primary'这个属性，标识这个按钮组件会采用主色值进行渲染。
 - 4、key和parentKey含义？
+  - 后端生成协议时，组织上下级关系的判断依据，具体实现参见：uretail-bill-meta-5.0.0-RELEASE
