--- a/docs/元数据配置说明.md
+++ b/docs/元数据配置说明.md
@@ -115,7 +115,7 @@
  String appNames = "ucf.customer";
 ```
 
-执行TableBuildTest，会在ucf-mdf-conf/resources/tpl-config.properties文件中配置的目录下生成sql脚本<br />![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/459064/1566543963242-b97ff2a8-ec4f-4530-8716-7bb1fad4fb36.png#align=left&display=inline&height=96&name=image.png&originHeight=96&originWidth=280&search=&size=4315&status=done&width=280)<br />然后在数据库中执行该建表SQL脚本；
+执行TableBuildTest，会在ucf-mdf-conf/resources/tpl-config.properties文件中配置的目录下生成sql脚本<br />![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/459064/1566543963242-b97ff2a8-ec4f-4530-8716-7bb1fad4fb36.png#align=left&display=inline&height=96&name=image.png&originHeight=96&originWidth=280&size=4315&status=done&width=280)<br />然后在数据库中执行该建表SQL脚本；
 
 <a name="9131dc31"></a>
 #### 方式2：设计器方式
