--- a/docs/公共属性.md
+++ b/docs/公共属性.md
@@ -74,7 +74,7 @@
 | bPrintCaption | Bool | true | 是否打印标题 |  |
 | bPrintUpCase | Bool | false | 是否打印金额大写 |  |
 | depends |  |  |  |  |
-| cSourceType | Text | null | 数据源类型 | 数据来源类型 |
+| ~~cSourceType~~ | ~~Text~~ | ~~null~~ | ~~数据源类型~~ | ~~数据来源类型，废弃~~ |
 | iFunctionType | Select | null | 功能类型 |  |
 | cDataRule | Refer | Text |  | 数据规则 | 全局数据配置 |
 | iTabIndex | Number | null | Tab键索引 |  |
