--- a/docs/后端工程安装与启动.md
+++ b/docs/后端工程安装与启动.md
@@ -17,7 +17,7 @@ spring.application.name=common-mdf
 spring.domain.name=ucf-mdf-domainName
 ```
 
-7.执行ucf-mdf-bootstrap项目下com.yonyou.ucf.mdf.MDFApplication类启动项目<br />PS:使用IDEA启动失败的话，需修改启动参数<br />![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/459064/1566530174205-35dc39cf-c24a-4916-a8e3-75bf009dabb5.png#align=left&display=inline&height=133&name=image.png&originHeight=126&originWidth=721&size=13323&status=done&width=758.9473779445872#align=left&display=inline&height=126&originHeight=126&originWidth=721&search=&status=done&width=721)
+7.执行ucf-mdf-bootstrap项目下com.yonyou.ucf.mdf.MDFApplication类启动项目<br />PS:使用IDEA启动失败的话，需修改启动参数<br />![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/459064/1566530174205-35dc39cf-c24a-4916-a8e3-75bf009dabb5.png#align=left&display=inline&height=133&name=image.png&originHeight=126&originWidth=721&size=13323&status=done&width=758.9473779445872#align=left&display=inline&height=126&originHeight=126&originWidth=721&status=done&width=721)
 
 ucf后端项目运行依赖的mdd sdk使用说明详情见wiki:[MDD-SDK使用说明文档](https://uap.wiki.yonyou.com/pages/viewpage.action?pageId=88604942)
 
