--- a/docs/常见问题.md
+++ b/docs/常见问题.md
@@ -5,3 +5,5 @@ viewmodel.biz.do('search', viewmodel, viewmodel.getCache('lastSearchCondition'))
 Excel
 
 - cstyle中配置的classname注意都是小写
+- 参照想设置一行显示，不显示多行，扩展脚本内弹出参照之前的事件设置this._set_data("returnText",true);
+- 一主多子多孙一屏展示，想让子表点击后，弹出孙表的信息，需要在excel的Table cStyle设置 {"cSunBillNo":"你的孙表数据源"}
