--- a/docs/扩展开发-打印.md
+++ b/docs/扩展开发-打印.md
@@ -1,6 +1,9 @@
 <a name="pscLJ"></a>
 # 1 功能概述
-      目前打印组件实现了打印预览、打印设计、直接打印功能。用户可以在excel中自定义打印按钮的布局。下面是以dropdown形式你实现的。那如何实现打印功能呢，需要用户增加环境变量、excel配置。<br />![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/192681/1560390193991-f4ca6df3-5fdb-4bdd-8663-88bdad57a68c.png#align=left&display=inline&height=200&name=image.png&originHeight=400&originWidth=936&search=&size=46212&status=done&width=468)
+      目前打印组件实现了打印预览、打印设计、直接打印功能。用户可以在excel中自定义打印按钮的布局。下面是以dropdown形式你实现的。那如何实现打印功能呢，需要用户增加环境变量、excel配置。
+
+
+![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/192681/1560390193991-f4ca6df3-5fdb-4bdd-8663-88bdad57a68c.png#align=left&display=inline&height=200&name=image.png&originHeight=400&originWidth=936&size=46212&status=done&style=none&width=468)
 <a name="oZavH"></a>
 # 2 环境变量配置
 在src/common/config.env.js 下定义打印相关参数配置如下：<br />**print_url**: 连接打印的后台地址，不同环境地址会不同。具体地址值在备注中有说明。<br />**domainCode**：域code值，不同业务code值不同。具体值可以咨询云打印人员。
