--- a/docs/整体架构说明.md
+++ b/docs/整体架构说明.md
@@ -8,7 +8,7 @@
 - 在Web渲染层，中间加有基于 Node.js 的 BFF 服务，生成模板单据对应的通用CRUD逻辑代码，并实现一些基本的服务代理、验证等工作。
 - 在前端展现层，则是完成基于UI元数据的解析渲染，并组装对应的React UI组件，最终在浏览器上呈现。
 
-![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/85184/1562745428657-d27f41e0-7753-4403-bd93-323e7faf37dc.png#align=left&display=inline&height=800&name=image.png&originHeight=1760&originWidth=1823&search=&size=435192&status=done&width=828.6363456761545)
+![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/85184/1562745428657-d27f41e0-7753-4403-bd93-323e7faf37dc.png#align=left&display=inline&height=800&name=image.png&originHeight=1760&originWidth=1823&size=435192&status=done&width=828.6363456761545)
 <a name="Xopk7"></a>
 # 
 
@@ -25,7 +25,7 @@
 - Web和Mobile采用同一套ViewModel，故此Web、移动、大屏等多端的编程模型相同。
 <a name="51c67f6c"></a>
 ### 2.2 前端架构图
-![client.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/271336/1554358904708-3d173aa9-da7d-400d-aa86-7a13439a66ce.png#align=left&display=inline&height=413&name=client.png&originHeight=732&originWidth=1322&search=&size=111553&status=done&width=746)
+![client.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/271336/1554358904708-3d173aa9-da7d-400d-aa86-7a13439a66ce.png#align=left&display=inline&height=413&name=client.png&originHeight=732&originWidth=1322&size=111553&status=done&width=746)
 <a name="88afcd3e"></a>
 # 
 <a name="pUBsr"></a>
@@ -60,4 +60,4 @@
 
 <a name="G69OH"></a>
 ## 3.3 架构图
-![node.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/271336/1554359036580-3ee28ddf-7fe1-4b9c-b231-22f0c406e35a.png#align=left&display=inline&height=410&name=node.png&originHeight=661&originWidth=1202&search=&size=101245&status=done&width=746)
+![node.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/271336/1554359036580-3ee28ddf-7fe1-4b9c-b231-22f0c406e35a.png#align=left&display=inline&height=410&name=node.png&originHeight=661&originWidth=1202&size=101245&status=done&width=746)
