--- a/docs/树卡支持浏览态、卡片子表编辑.md
+++ b/docs/树卡支持浏览态、卡片子表编辑.md
@@ -18,7 +18,7 @@
 ```javascript
 data.params.metaType = billtype;
 ```
-如下图：<br />![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/271337/1560416977220-0485c064-27f0-459f-a461-bf2199e4205e.png#align=left&display=inline&height=350&name=image.png&originHeight=350&originWidth=1594&search=&size=105344&status=done&width=1594)
+如下图：<br />![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/271337/1560416977220-0485c064-27f0-459f-a461-bf2199e4205e.png#align=left&display=inline&height=350&name=image.png&originHeight=350&originWidth=1594&size=105344&status=done&width=1594)
 
 <a name="IsAQ8"></a>
 ## 4、访问地址
