--- a/docs/模板级扩展.md
+++ b/docs/模板级扩展.md
@@ -12,7 +12,7 @@
 ### 1 命名规则
 模板扩展文件名字是有子产品编码（配置cSubId，如：EMM）和当前的单据编码billNo（配置cBillNo，如：emm_pcdaily_list）组成。<br />**eg:** EMM_emm_pcdaily_list_VM.Extend.js
 
-![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/271337/1571138096906-64c62d01-5000-4843-9bc2-39fa3949ffcd.png#align=left&display=inline&height=104&name=image.png&originHeight=208&originWidth=836&search=&size=37857&status=done&width=418)
+![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/271337/1571138096906-64c62d01-5000-4843-9bc2-39fa3949ffcd.png#align=left&display=inline&height=104&name=image.png&originHeight=208&originWidth=836&size=37857&status=done&width=418)
 
 <a name="qd0e5"></a>
 ### 2 加载流程和逻辑
@@ -146,4 +146,4 @@ init: function (viewmodel) {
 #### 3.5 抽取公共逻辑
 一般会把通用的逻辑进行抽取放到common中。一般会在bussiness中建立一个common文件夹里面放一些公共逻辑。其他各业务节点可以先将公共脚本载入进行依赖，如下：
 
-![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/192681/1567684535675-02540895-7214-4da4-99c8-47c5743cf662.png#align=left&display=inline&height=266&name=image.png&originHeight=666&originWidth=1010&search=&size=55325&status=done&width=404)
+![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/192681/1567684535675-02540895-7214-4da4-99c8-47c5743cf662.png#align=left&display=inline&height=266&name=image.png&originHeight=666&originWidth=1010&size=55325&status=done&width=404)
