--- a/docs/脚手架规范说明.md
+++ b/docs/脚手架规范说明.md
@@ -10,9 +10,9 @@ packages/mdf-app
 ├── package.json
 ├── pm2.json
 ├── src
+│   │── business					# 业务扩展脚本(JS)
+│   │   └── common
 │   ├── client
-│   │   ├── business					# 业务扩展脚本(JS)
-│   │   │   └── common
 │   │   ├── index.jsx
 │   │   └── styles            # 业务样式代码
 │   │       └── default
