--- a/docs/过滤器.md
+++ b/docs/过滤器.md
@@ -1,1 +1,27 @@
-<span />
+> 创建者：姚磊
+> 创建时间：2019-11-17
+
+> 修改者：
+> 修改时间：
+
+
+<a name="t7BaX"></a>
+### 基础属性
+| **属性** | **类型** | **默认值** | **含义** | **备注** |
+| :---: | :---: | :---: | :---: | :---: |
+| filterName | Text | 必输 | 过滤名称 |  |
+| filterDesc | Text | null | 过滤描述 |  |
+| behaviorObject | Text | null | 扩展脚本路径 |  |
+
+
+<a name="zOtJ8"></a>
+### 隐藏属性
+| **属性** | **类型** | **默认值** | **含义** | **备注** |
+| :---: | :---: | :---: | :---: | :---: |
+| id | Text | 必输 | ID | 主键 |
+| sysId | Text | null | 系统ID | 租户模板用来关联系统模板的ID |
+| createTime | Text | null | 创建时间 |  |
+| updateTime | Text | null | 更新时间 |  |
+| isUpGrade | Bool | null |  |  |
+| dr | Text | null | 删除标记 |  |
+| advanceSupport | Text | null | 高级查询 |  |
