--- a/docs/附件管理能力介绍.md
+++ b/docs/附件管理能力介绍.md
@@ -10,4 +10,4 @@
 
 <a name="R7ukN"></a>
 ### 功能展示
-![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/306847/1573021346430-f45e886a-501e-4812-8c88-18266329a35b.png#align=left&display=inline&height=72&name=image.png&originHeight=80&originWidth=830&search=&size=16528&status=done&width=746)
+![image.png](http://design.yonyoucloud.com/static/yuque/0/2019/png/306847/1573021346430-f45e886a-501e-4812-8c88-18266329a35b.png#align=left&display=inline&height=72&name=image.png&originHeight=80&originWidth=830&size=16528&status=done&width=746)
