--- a/docs/查询方案项.md
+++ b/docs/查询方案项.md
@@ -12,21 +12,14 @@
 | itemName | Text | 必输 | 字段名称 |  |
 | itemTitle | Text | null | 字段标题 |  |
 | itemType | Select | 必输 | 控件类型 | 查看《基础控件清单》 |
-| compareLogic | Select | null | 比较符 | 查看《比较符枚举》 |
-| dataSource | Text | null | 数据源 |  |
-| descValue | Text | null | 字段描述 |  |
 | isCommon | Bool | false | 是否公共 |  |
-| mustInput | Bool | false | 是否必输 |  |
 | rangeInput | Bool | false | 是否区间 |  |
 | multSelect | Bool | false | 是否多选 |  |
-| allowUpdateCompare | Bool | false | 允许更新比较符 |  |
+| compareLogic | Select | null | 比较符 | 查看《比较符枚举》 |
+| bhidden | Bool | false | 是否忽略 | 是否忽略此属性，简版设计器不显示 |
 | defaultVal1 | Text | null | 默认值1 |  |
 | defaultVal2 | Text | null | 默认值2 |  |
-| extendField | JSON | null | 扩展属性 | 类似cStyle |
-| cFormatData | Text | null | 日期格式 | 日期类控件 |
 | referCode | Refer | null | 参照编码 | 参照控件 |
-| refReturn | Text | null | 参照返回值 | 参照控件 |
-| displayname | Text | null | 参照回显值 | 参照控件 |
 | cEnumType | Text | null | 枚举类型 | 枚举类控件 |
 | bEnum | Bool | false | 是否枚举 | 枚举类控件 |
 
@@ -36,18 +29,15 @@
 | **属性** | **类型** | **默认值** | **含义** | **备注** |
 | :---: | :---: | :---: | :---: | :---: |
 | id | Text | 必输 | ID | 主键 |
-| filtersId | Text | 必输 | 过滤器ID |  |
-| referId | Text | null | 参照ID |  |
+| solutionId | Text | 必输 | 查询方案ID |  |
+| itemId | Text | 必输 | 查访方案项ID |  |
 | refType | Text | null | 参照类型 |  |
-| iprecision | Number | null |  |  |
-| orLogic | Bool | false | 是否或比较 |  |
+| tenant_id | Text | 0 | 租户ID |  |
+| defineId | Text | null | 自定义ID |  |
+| isshoprelated | Bool | false | 是否门店 |  |
 | bAutoflt | Bool | null | 是否自动搜索 |  |
-| groupName | Text | null | 分组名称 |  |
-| isSys | Bool | true | 是否系统 |  |
-| createTime | Text | null | 创建时间 |  |
-| updateTime | Text | null | 更新时间 |  |
-| dr | Text | null | 删除标记 |  |
-| auth_level | Number | 3 | 权限级别 | <br /> |
-| isMasterOrg | Bool | null | 是否主组织 |  |
 | cDataRule | Text | null | 数据规则 |  |
-| attribute | Text | null | 属性 |  |
+| orderId | Number | 0 | 排序 |  |
+| saveHistory | Text | null | 保存历史 |  |
+| checkRefer | Bool | false | 是否检查参照 |  |
+| ~~pb_filter_solution_commoncol~~ | ~~Text~~ | ~~null~~ |  |  |
